--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
